# MagAndroid

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/magandorid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/magandorid/: CalibrationActivity.kt  ConfigurationActivity.kt  FindDeviceMainActivity.kt  JniCallNative.java  RealTimeActivity.kt  StartActivity.kt  TrackingActivity.kt  mainActivity.java
app/src/main/java/com/example/magandorid/blescanner/: BleScanManager.kt
app/src/main/java/com/example/magandorid/blescanner/adapter/: BleDeviceAdapter.kt
app/src/main/java/com/example/magandorid/blescanner/model/: BleDevice.kt  BleScanCallback.kt
app/src/main/jni/: com_example_magandorid_JniCallNative.h  jninative.cpp
app/src/main/jni/include/ceres/internal/: config.h
app/src/main/res/drawable/: ic_bluetooth.xml
app/src/main/res/layout/: activity_calibration.xml  activity_configuration.xml  activity_find_device.xml  activity_find_device_main.xml  activity_main.xml  activity_real_time.xml  activity_start.xml  activity_tracking.xml  device_row_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/magandorid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
